# apps/api/src/hotels/hotels.dto.ts
@@ -1,0 +1,10 @@
+import {
+  hotelSearchQuerySchema,
+  hotelSearchResponseSchema,
+} from '@repo/shared';
+import { createZodDto } from 'nestjs-zod';
+
+export class SearchHotelsDto extends createZodDto(hotelSearchQuerySchema) {}
+export class HotelSearchResponseDto extends createZodDto(
+  hotelSearchResponseSchema,
+) {}
